# InterCalc

./: .gitignore  main.spec  pyproject.toml
.github/workflows/: binaries_build.yml  get_windows_exe.yml
src/: app.py  calculator.py  main.py  widgets.py
