[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "InterCalc"
Repository = "https://github.com/niltonperimneto/InterCalc.git"
version = "0.0.3"
description = "A simple calculator made in Python with the Qt6 toolkit."
authors = [
    { name="Nilton Perim Neto", email="niltonperimneto@gmail.com" }
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "PyQt6>=6.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
InterCalc = "intercalc:main"
